# MyPodcaster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  implemention_blueprint.md  problem_statement.md  pyproject.toml
.github/workflows/: ci.yml
app/: agent.py  api.py  config.py  jobs.py  main.py  models.py  tools.py  tts.py  ui.py
scripts/: preview_ui.py
tests/: conftest.py  test_agent.py  test_api.py  test_jobs.py  test_models.py  test_tools.py  test_tts.py  test_ui.py
tests/evals/: conftest.py  test_efficiency.py  test_summary_quality.py
