[project]
name = "audio-briefing-engine"
version = "0.1.0"
description = "Generate audio news briefings from Hacker News"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "gradio>=5.5.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "cachetools>=5.5.0",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "sentry-sdk>=2.16.0",
]

[project.optional-dependencies]
eval = [
    "deepeval>=1.0.0",
    "mutagen>=1.47.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# ── Ruff (lint + format) ──────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy (type checking) ──────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit external APIs (deselect with '-m \"not integration\"')",
    "eval: marks evaluation tests (deselect with '-m \"not eval\"')",
]
